Preparation for composer submission

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "vaalyn/plugin-service",
     "description": "A plugin service for the Slim Framework 3",
+	"keywords": ["plugin", "service", "slim", "loader", "extend"],
+	"homepage": "https://github.com/Vaalyn/plugin-service",
     "type": "library",
     "license": "Apache-2.0",
     "authors": [
@@ -10,16 +12,11 @@
         }
     ],
     "require": {
+		"php": ">=7.2.0",
         "psr/container": "^1.0",
         "slim/slim": "^3.11",
         "vaalyn/config-loader-service": "dev-master"
     },
-	"repositories": [
-		{
-			"type": "git",
-			"url": "git@github.com:Vaalyn/config-loader-service.git"
-		}
-	],
 	"autoload": {
         "psr-4": {
 			"Vaalyn\\PluginService\\": "src"
